@@ -1,3 +1,8 @@
+2003-10-30  Lutz Mueller <lutz@users.sourceforge.net>
+
+	* libexif/exif-data.c: Add explicit typecasts to ExifShort.
+	  Suggested by Jan Patera <patera@pictview.com>.
+
 2003-10-28  Lutz Mueller <lutz@users.sourceforge.net>
 
 	* libexif/olympus: Fix. I've got one Olympus file and this gets
